Add CXI provider
-Add CXI provider subdir
-Add CXI provider to build
-Add cxi_fabric.c
-Add cxi_dom.c
-Add cxi_ep_rdm.c
-Add cxi_ep.c
-Add cxi_ctx.c
-Add stub code in cxi_cntr.c, cxi_cq.c and cxi_av.c
-Add criterion based test to cxi/test.
-Add a few tests to show CXI fabric selection.

Signed-off-by: Zach <ztiffany@cray.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -419,6 +419,7 @@ include prov/psm/Makefile.include
 include prov/psm2/Makefile.include
 include prov/psm3/Makefile.include
 include prov/gni/Makefile.include
+include prov/cxi/Makefile.include
 include prov/rxm/Makefile.include
 include prov/mrail/Makefile.include
 include prov/rxd/Makefile.include
