prov/cxi: Implement basic RMA Write
For NETCASSINI-590.

Signed-off-by: Zach Tiffany <ztiffany@cray.com>

--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -22,7 +22,8 @@ _cxi_files = \
 	prov/cxi/src/cxi_av.c \
 	prov/cxi/src/cxi_cq.c \
 	prov/cxi/src/cxi_cntr.c \
-	prov/cxi/src/cxi_wait.c
+	prov/cxi/src/cxi_wait.c \
+	prov/cxi/src/cxix_rma.c
 
 _cxi_headers = \
 	prov/cxi/include/cxi_prov.h
