--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -23,7 +23,8 @@ _cxi_files = \
 	prov/cxi/src/cxi_cq.c \
 	prov/cxi/src/cxi_cntr.c \
 	prov/cxi/src/cxi_wait.c \
-	prov/cxi/src/cxix_rma.c
+	prov/cxi/src/cxix_rma.c \
+	prov/cxi/src/cxix_mr.c
 
 _cxi_headers = \
 	prov/cxi/include/cxi_prov.h
