prov/cxi: Add device IF API
-Add cxix_if.c which implements a new device IF API
-The device IF API includes functions to get/put each CXI Interface device
and CXI Interface Domains and to allocate CXI IF Domain Logical EPs.
-A CXI IF Device represents a single physical CXI device.  FI objects take
a reference to an IF Device in order to allocate EQ, CMDQ, PtlTE resources.
-A CXI IF Device can support many FI Domains
-A CXI IF Device currently holds a special CMDQ and EVTQ that is used for
enabling MRs.
-A CXI IF Domain represents an address space of CXI logical endpoints.  FI EPs
and MRs allocate logical endpoints to support RX protocols.
-A CXI IF Domain can supports many FI Domains
-The list of IFs is populated when the library initializes.  CXI resources are
allocated when the first reference to an IF is taken.

For NETCASSINI-592.

Signed-off-by: Zach Tiffany <ztiffany@cray.com>

--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -4,9 +4,16 @@
 
 if HAVE_CXI
 
-AM_CPPFLAGS += -I$(top_srcdir)/prov/cxi/include -I$(top_srcdir)/prov/cxi
+AM_CPPFLAGS += \
+	-I$(top_srcdir)/prov/cxi/include \
+	-I$(top_srcdir)/prov/cxi \
+	-I$(srcdir)/../cxi-driver/include \
+	-I$(srcdir)/../nic-emu \
+	-I$(srcdir)/../cassini-headers/src/csrdef/ \
+	-D__user=
 
 _cxi_files = \
+	prov/cxi/src/cxix_if.c \
 	prov/cxi/src/cxi_fabric.c \
 	prov/cxi/src/cxi_dom.c \
 	prov/cxi/src/cxi_ep.c \
