--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -39,7 +39,8 @@ nodist_prov_cxi_test_cxitest_SOURCES = \
 	prov/cxi/test/ep.c \
 	prov/cxi/test/cq.c \
 	prov/cxi/test/av.c \
-	prov/cxi/test/rma.c
+	prov/cxi/test/rma.c \
+	prov/cxi/test/tagged.c
 
 prov_cxi_test_cxitest_CPPFLAGS = $(AM_CPPFLAGS) $(cxi_CPPFLAGS) \
 	$(cxitest_CPPFLAGS)
