--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -41,6 +41,7 @@ nodist_prov_cxi_test_cxitest_SOURCES = \
 	prov/cxi/test/cq.c \
 	prov/cxi/test/av.c \
 	prov/cxi/test/rma.c \
+	prov/cxi/test/sep.c \
 	prov/cxi/test/tagged.c \
 	prov/cxi/test/atomic.c
 
