prov/cxi: support FI_MSG
-implement fi_send, fi_recv
-no unexpected message buffering
-all messages are sent eagerly

Fixes NETCASSINI-988.

Signed-off-by: Zach Tiffany <ztiffany@cray.com>

--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -43,6 +43,7 @@ nodist_prov_cxi_test_cxitest_SOURCES = \
 	prov/cxi/test/rma.c \
 	prov/cxi/test/sep.c \
 	prov/cxi/test/tagged.c \
+	prov/cxi/test/msg.c \
 	prov/cxi/test/atomic.c
 
 prov_cxi_test_cxitest_CPPFLAGS = $(AM_CPPFLAGS) $(cxi_CPPFLAGS) \
