--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -28,7 +28,8 @@ _cxi_files = \
 	prov/cxi/src/cxip_mr.c \
 	prov/cxi/src/cxip_msg.c \
 	prov/cxi/src/cxip_atomic.c \
-	prov/cxi/src/cxip_iomm.c
+	prov/cxi/src/cxip_iomm.c \
+	prov/cxi/src/cxip_faults.c
 
 _cxi_headers = \
 	prov/cxi/include/cxip.h
