--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -17,7 +17,6 @@ _cxi_files = \
 	prov/cxi/src/cxip_fabric.c \
 	prov/cxi/src/cxip_dom.c \
 	prov/cxi/src/cxip_ep.c \
-	prov/cxi/src/cxip_ep_rdm.c \
 	prov/cxi/src/cxip_txc.c \
 	prov/cxi/src/cxip_rxc.c \
 	prov/cxi/src/cxip_av.c \
@@ -29,7 +28,8 @@ _cxi_files = \
 	prov/cxi/src/cxip_msg.c \
 	prov/cxi/src/cxip_atomic.c \
 	prov/cxi/src/cxip_iomm.c \
-	prov/cxi/src/cxip_faults.c
+	prov/cxi/src/cxip_faults.c \
+	prov/cxi/src/cxip_info.c
 
 _cxi_headers = \
 	prov/cxi/include/cxip.h
