prov/cxi: support counters
-Remove cxip_comp structure, put only relevent completion object
pointers in the appropriate structures
-Implement hardware counter access
-No support for counter wait objects
-Test counters with AMO, RMA, Messaging
-Long message sends and all receives require software progress to update
counters. These are multi-part transactions, so hardware cannot
correctly do accountingt push.

Signed-off-by: Zach Tiffany <ztiffany@cray.com>

--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -47,7 +47,8 @@ nodist_prov_cxi_test_cxitest_SOURCES = \
 	prov/cxi/test/sep.c \
 	prov/cxi/test/tagged.c \
 	prov/cxi/test/msg.c \
-	prov/cxi/test/atomic.c
+	prov/cxi/test/atomic.c \
+	prov/cxi/test/cntr.c
 
 prov_cxi_test_cxitest_CPPFLAGS = $(AM_CPPFLAGS) $(cxi_CPPFLAGS) \
 	$(cxitest_CPPFLAGS) $(PTHREAD_CFLAGS)
