--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -49,7 +49,8 @@ nodist_prov_cxi_test_cxitest_SOURCES = \
 	prov/cxi/test/msg.c \
 	prov/cxi/test/atomic.c \
 	prov/cxi/test/cntr.c \
-	prov/cxi/test/tagged_stress.c
+	prov/cxi/test/tagged_stress.c \
+	prov/cxi/test/mr.c
 
 prov_cxi_test_cxitest_CPPFLAGS = $(AM_CPPFLAGS) $(cxi_CPPFLAGS) \
 	$(cxitest_CPPFLAGS) $(PTHREAD_CFLAGS)
