prov/cxi: Add control progress
-Restructure to hold a set of PTE/EQ/TGQ in each EP for all control
operations.
-Control resources are used to allocate MRs. In the future they will be
used to support flow control recovery messaging.
-Create a control progress function which polls the EP control EQ.
-Progress control operations whenever completion queue progress is
performed.
-This creates support for asynchronous MR allocation progress.
-Reduce MR key size to 16 bits. The max number of supported MRs/EP will
never exceed 16k (due to LE limit). 16 bit MR key is plenty. Reducing
from 64 bits is needed to multiplex other operations on the control PTE.

Signed-off-by: Zach Tiffany <ztiffany@cray.com>

--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -28,7 +28,8 @@ _cxi_files = \
 	prov/cxi/src/cxip_atomic.c \
 	prov/cxi/src/cxip_iomm.c \
 	prov/cxi/src/cxip_faults.c \
-	prov/cxi/src/cxip_info.c
+	prov/cxi/src/cxip_info.c \
+	prov/cxi/src/cxip_ctrl.c
 
 _cxi_headers = \
 	prov/cxi/include/cxip.h
