--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0
 #
-# Copyright 2018 Cray Inc. All rights reserved.
+# Copyright 2018,2020 Cray Inc. All rights reserved.
 
 if HAVE_CXI
 
@@ -20,6 +20,7 @@ _cxi_files = \
 	prov/cxi/src/cxip_rxc.c \
 	prov/cxi/src/cxip_av.c \
 	prov/cxi/src/cxip_avset.c \
+	prov/cxi/src/cxip_eq.c \
 	prov/cxi/src/cxip_cq.c \
 	prov/cxi/src/cxip_cntr.c \
 	prov/cxi/src/cxip_wait.c \
@@ -42,6 +43,7 @@ nodist_prov_cxi_test_cxitest_SOURCES = \
 	prov/cxi/test/fabric.c \
 	prov/cxi/test/domain.c \
 	prov/cxi/test/ep.c \
+	prov/cxi/test/eq.c \
 	prov/cxi/test/cq.c \
 	prov/cxi/test/av.c \
 	prov/cxi/test/avset.c \
