prov/cxi: Deferred WQ message test
Signed-off-by: Ian Ziemba <ian.ziemba@hpe.com>

--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -54,7 +54,8 @@ nodist_prov_cxi_test_cxitest_SOURCES = \
 	prov/cxi/test/atomic.c \
 	prov/cxi/test/cntr.c \
 	prov/cxi/test/tagged_stress.c \
-	prov/cxi/test/mr.c
+	prov/cxi/test/mr.c \
+	prov/cxi/test/deferred_work.c
 
 prov_cxi_test_cxitest_CPPFLAGS = $(AM_CPPFLAGS) $(cxi_CPPFLAGS) \
 	$(cxitest_CPPFLAGS) $(PTHREAD_CFLAGS)
