Add Restricted Put PTE.
Adds routines:
- cxip_coll_init()
- cxip_coll_enable()
- cxip_coll_close()
- cxip_coll_send()

These are called at the appropriate points in endpoint creation,
activation, and closing, to add a restricted put target portal. This
automatically adds locally_managed buffers, which are self-managed. The
cxip_coll_send() function will send a restricted packet.

Enpoint collective parameters coll.buffer_count and coll.buffer_size can
be adjusted while the collective PTE is disabled to change the sizes and
counts of the buffers.

Signed-off-by: Joe Nemeth <joseph.nemeth@hpe.com>

--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -14,6 +14,7 @@ AM_CPPFLAGS += \
 _cxi_files = \
 	prov/cxi/src/cxip_if.c \
 	prov/cxi/src/cxip_fabric.c \
+	prov/cxi/src/cxip_coll.c \
 	prov/cxi/src/cxip_dom.c \
 	prov/cxi/src/cxip_ep.c \
 	prov/cxi/src/cxip_txc.c \
@@ -55,7 +56,8 @@ nodist_prov_cxi_test_cxitest_SOURCES = \
 	prov/cxi/test/cntr.c \
 	prov/cxi/test/tagged_stress.c \
 	prov/cxi/test/mr.c \
-	prov/cxi/test/deferred_work.c
+	prov/cxi/test/deferred_work.c \
+	prov/cxi/test/coll.c
 
 prov_cxi_test_cxitest_CPPFLAGS = $(AM_CPPFLAGS) $(cxi_CPPFLAGS) \
 	$(cxitest_CPPFLAGS) $(PTHREAD_CFLAGS)
