--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -33,7 +33,8 @@ _cxi_files = \
 	prov/cxi/src/cxip_ctrl.c
 
 _cxi_headers = \
-	prov/cxi/include/cxip.h
+	prov/cxi/include/cxip.h \
+	prov/cxi/include/fi_cxi_ext.h
 
 if HAVE_CRITERION
 bin_PROGRAMS += prov/cxi/test/cxitest
@@ -60,6 +61,9 @@ prov_cxi_test_cxitest_CPPFLAGS = $(AM_CPPFLAGS) $(cxi_CPPFLAGS) \
 	$(cxitest_CPPFLAGS) $(PTHREAD_CFLAGS)
 prov_cxi_test_cxitest_LDFLAGS = $(cxitest_LDFLAGS) -static
 prov_cxi_test_cxitest_LDADD =  $(cxitest_LIBS) $(linkback) $(PTHREAD_LIBS)
+
+rdmainclude_HEADERS += \
+	prov/cxi/include/fi_cxi_ext.h
 
 TESTS += prov/cxi/test/cxitest
 endif HAVE_CRITERION
