prov/cxi: Support SW EP mode only
Software endpoint mode is a feature which requires software to perform
the message matching that hardware would do. The benefit of this mode is
the number of posted receives and unexpected messages can scale past the
hardware LE limit. But, this comes at a performance cost.

Transition from hardware to software endpoint and back is currently not
supported.

FI_CXI_MSG_OFFLOAD is used to enable this feature. Request buffer count
and sizing is controlled with FI_CXI_REQ_BUF_COUNT and
FI_CXI_REQ_BUF_SIZE.

Signed-off-by: Ian Ziemba <ian.ziemba@hpe.com>

--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -31,7 +31,8 @@ _cxi_files = \
 	prov/cxi/src/cxip_iomm.c \
 	prov/cxi/src/cxip_faults.c \
 	prov/cxi/src/cxip_info.c \
-	prov/cxi/src/cxip_ctrl.c
+	prov/cxi/src/cxip_ctrl.c \
+	prov/cxi/src/cxip_req_buf.c
 
 _cxi_headers = \
 	prov/cxi/include/cxip.h \
