--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -45,7 +45,6 @@ rdmainclude_HEADERS += \
 if HAVE_CRITERION
 bin_PROGRAMS += prov/cxi/test/cxitest
 nodist_prov_cxi_test_cxitest_SOURCES = \
-	prov/cxi/test/ltu_utils_pm.c \
 	prov/cxi/test/cxip_test_common.c \
 	prov/cxi/test/fabric.c \
 	prov/cxi/test/domain.c \
@@ -67,11 +66,24 @@ nodist_prov_cxi_test_cxitest_SOURCES = \
 	prov/cxi/test/lat.c
 
 prov_cxi_test_cxitest_CPPFLAGS = $(AM_CPPFLAGS) $(cxi_CPPFLAGS) \
-	$(cxitest_CPPFLAGS) $(PTHREAD_CFLAGS) -DUSE_PMI
+	$(cxitest_CPPFLAGS) $(PTHREAD_CFLAGS)
 prov_cxi_test_cxitest_LDFLAGS = $(cxitest_LDFLAGS) -static
-prov_cxi_test_cxitest_LDADD =  $(cxitest_LIBS) $(linkback) $(PTHREAD_LIBS) -lpmi
+prov_cxi_test_cxitest_LDADD =  $(cxitest_LIBS) $(linkback) $(PTHREAD_LIBS)
 
 TESTS += prov/cxi/test/cxitest
+
+if HAVE_PMI
+
+nodist_prov_cxi_test_cxitest_SOURCES += \
+	prov/cxi/test/ltu_utils_pm.c \
+	prov/cxi/test/cxip_test_pmi.c \
+	prov/cxi/test/coll_mcast.c
+
+prov_cxi_test_cxitest_CPPFLAGS += -DUSE_PMI
+prov_cxi_test_cxitest_LDADD += -lpmi
+
+endif HAVE_PMI
+
 endif HAVE_CRITERION
 
 if HAVE_CXI_DL
