Add pre-arming phase.
Add timeout specifier for mc_obj, to set the time at which a pre-arm is
forced. Reduction timers are initialized to zero, which will force a
pre-arm on the first use of any reduction channel.

Prearming on the root node can proceed with reduction, but leaf nodes
will now push back on the application with -FI_EAGAIN if the reduction
channel has timed out (presumed not-armed). User should progress state
and retry until the -FI_EAGAIN clears.

Timeout expiration is detected during command injection, and indicates
the user waited too long to start a new reduction. The pre-arm will
transparently correct this.

Timeout expiration is also detected during root progression, and
indicates that one or more leaves took too long to respond. This will
trigger a retry packet send from the root.

Add pre-arm packet, which is a reduction packet with a reduction count
of zero, and the retry bit clear. Sent only by the root.

Change seqno to be in mc_obj (shared by all reduction channels) rather
than per-reduction. This will make reduction packets easier to track.

Add CLOCK_MONOTONIC inline functions to manage timeouts.

Fix 'coll_reduce' test code to handle the forced reordering of
operations due to -FI_EAGAIN responses from leaf nodes.

Signed-off-by: Joe Nemeth <joseph.nemeth@hpe.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .libs
 .deps
 .dirstamp
+.vscode
 *.o
 *.lo
 *.la
@@ -41,6 +42,7 @@ config.log
 config.lt
 config.status
 configure
+install
 libtool
 
 libfabric.spec
