Add basic Zero-Buffer send for use with ZB collectives. JIRA: NETCASSINI-2825
This implements and tests the basic ZB send routine with associated callbacks,
and prototypes the collective operations.

Signed-off-by: Joe Nemeth <joseph.nemeth@hpe.com>

--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -14,6 +14,7 @@ _cxi_files = \
 	prov/cxi/src/cxip_if.c \
 	prov/cxi/src/cxip_fabric.c \
 	prov/cxi/src/cxip_coll.c \
+	prov/cxi/src/cxip_zbcoll.c \
 	prov/cxi/src/cxip_curl.c \
 	prov/cxi/src/cxip_dom.c \
 	prov/cxi/src/cxip_ep.c \
@@ -47,6 +48,7 @@ _cxi_libs = \
 
 if HAVE_CRITERION
 
+# curltest is not expected to exist outside devel env
 bin_PROGRAMS += prov/cxi/test/curltest
 prov_cxi_test_curltest_SOURCES = \
 	prov/cxi/test/curl.c
@@ -75,6 +77,7 @@ nodist_prov_cxi_test_cxitest_SOURCES = \
 	prov/cxi/test/mr.c \
 	prov/cxi/test/deferred_work.c \
 	prov/cxi/test/coll.c \
+	prov/cxi/test/ctrl.c \
 	prov/cxi/test/lat.c
 
 prov_cxi_test_cxitest_CPPFLAGS = $(AM_CPPFLAGS) $(cxi_CPPFLAGS) \
