--- a/libfabric.spec.in
+++ b/libfabric.spec.in
@@ -23,6 +23,13 @@ BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 %if 0%{?suse_version} >= 1
 Provides: libfabric1 = %{version}-%{release}
 %endif
+%if 0%{?centos}
+Requires:   libcurl json-c
+BuildRequires: libcurl-devel json-c-devel
+%else
+Requires:   libcurl4 libjson-c3
+BuildRequires: libcurl-devel libjson-c-devel
+%endif
 
 %description
 libfabric provides a user-space API to access high-performance fabric
