fabtests/multinode: Add performance options to the multinode tests
Multinode tests will output min time for a send, max time for a
send, average time for a send, and the total time it took for the
pattern to complete.

Use -T to run fi_multinode in performance mode

Signed-off-by: Alex McKinley <alex.mckinley@intel.com>

--- a/fabtests/Makefile.am
+++ b/fabtests/Makefile.am
@@ -446,6 +446,7 @@ multinode_fi_multinode_SOURCES = \
 	multinode/src/pattern.c \
 	multinode/include/pattern.h \
 	multinode/src/core.c \
+	multinode/src/timing.c\
 	multinode/include/core.h
 
 multinode_fi_multinode_LDADD = 	libfabtests.la
