Update pmi_utils for sawmill suppport.
JIRA: NETCASSINI-3235, NETCASSINI-2451

Support PMI on sawmill, to allow srun testing on larger sets of nodes.
This supports a PMI-based Barrier, Broadcast, and Allgather, which are
needed to set up multinode test environments. In production, these
features are supplied by the libfabric client, e.g. MPI. This code is
for libfabric bench testing only.

Rename local ltu_utils_pm to pmi_utils to avoid confusion with
libfabric-test-utils ltu_utils_pm.

Rework local pmi_utils.c and pmi_utils.h for clarity and functionality,
and rename to pmi_utils.c and pmi_utils.h respectively. Cray PMI2 supported.
Non-cray and PMI1 support are accommodated, but not implemented or tested.

Fix cxip_test_pmi.c for compatibility with pmi_utils changes.

Add standalone libfabric/prov/cxi/test/distributed/test_pmi, as a prototype
of future srun-compatible tests, and to validate the pmi_utils features.

Remove cxip_coll.c build and testing. Requires significant rework.

Signed-off-by: Joe Nemeth <joseph.nemeth@hpe.com>

--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -46,6 +46,23 @@ rdmainclude_HEADERS += \
 _cxi_libs = \
 	-lcurl -ljson-c -lm
 
+if HAVE_PMI
+# Stand-alone srun  tests for hardware testing environment
+bin_PROGRAMS += prov/cxi/test/distributed/test_pmi
+nodist_prov_cxi_test_distributed_test_pmi_SOURCES = \
+	prov/cxi/test/distributed/test_pmi.c \
+	prov/cxi/test/pmi_utils.c
+prov_cxi_test_distributed_test_pmi_CPPFLAGS = \
+	$(AM_CPPFLAGS) $(cxi_CPPFLAGS) $(PTHREAD_CFLAGS) \
+	-DUSE_PMI2 -DUSE_CRAY_PMI \
+	-I/opt/cray/pe/pmi/default/include \
+	-L/opt/cray/pe/pmi/default/lib
+prov_cxi_test_distributed_test_pmi_LDFLAGS = \
+	$(cxitest_LDFLAGS) -static
+prov_cxi_test_distributed_test_pmi_LDADD = \
+	$(cxitest_LIBS) $(linkback) $(PTHREAD_LIBS) -lpmi2
+endif HAVE_PMI
+
 if HAVE_CRITERION
 
 # curltest is not expected to exist outside devel env
@@ -89,13 +106,14 @@ TESTS += prov/cxi/test/cxitest
 
 if HAVE_PMI
 
-nodist_prov_cxi_test_cxitest_SOURCES += \
-	prov/cxi/test/ltu_utils_pm.c \
-	prov/cxi/test/cxip_test_pmi.c \
-	prov/cxi/test/coll_mcast.c
+#nodist_prov_cxi_test_cxitest_SOURCES += \
+#	prov/cxi/test/pmi_utils.c \
+#	prov/cxi/test/cxip_test_pmi.c \
+#	prov/cxi/test/coll_mcast.c
 
-prov_cxi_test_cxitest_CPPFLAGS += -DUSE_PMI
-prov_cxi_test_cxitest_LDADD += -lpmi
+#prov_cxi_test_cxitest_CPPFLAGS += -DUSE_PMI2 -DUSE_CRAY_PMI
+#prov_cxi_test_cxitest_CPPFLAGS += -I /opt/cray/pe/pmi/default/include
+#prov_cxi_test_cxitest_LDADD += -lpmi2
 
 endif HAVE_PMI
 
