Implement zbcoll getgroup and callback stack.
JIRA: NETCASSINI-3508 NETCASSINI-3297 NETCASSINI-3272 NETCASSINI-3509

See design notes in:

https://connect.us.cray.com/confluence/display/SASSHOT/Collectives+-+Libfabric+Implementation#Collectives-LibfabricImplementation-GeneratingaMulticastAddressinfi_join_collective()

Significant rewrite and extension of of cxip_zbcoll.c to add features.

Added test_zbcoll.c to regression-test cxip_zbcoll.c features.

Significant rewrite of ctrl.c to manage underlying zbcoll packets.

Add cxip_trace_fn pointer for multi-node tracing to rank-named external files.

Add custom cxip_eq_read() function to replace ofi_eq_read() and allow
for curl completion polling in the EQ poll.

Expand pmi_frmwk.c to do auto-population of NIDs in SLURM run.

Enhance test_frmwk.c.

Minor edits:
- remove unused 'lock' from struct cxip_ep_coll_obj.
- change cxip_coll_init() return to void.
- minor punctuation and style errors.

Signed-off-by: Joe Nemeth <joseph.nemeth@hpe.com>

--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -76,6 +76,13 @@ prov_cxi_test_distributed_test_frmwk_LDFLAGS = -static
 prov_cxi_test_distributed_test_frmwk_LDADD = prov/cxi/lib/libfrmwk.la \
 	$(linkback) $(PTHREAD_LIBS)
 
+bin_PROGRAMS += prov/cxi/test/distributed/test_zbcoll
+prov_cxi_test_distributed_test_zbcoll_SOURCES = \
+	prov/cxi/test/distributed/test_zbcoll.c
+prov_cxi_test_distributed_test_zbcoll_LDFLAGS = -static
+prov_cxi_test_distributed_test_zbcoll_LDADD = prov/cxi/lib/libfrmwk.la \
+	$(linkback) $(PTHREAD_LIBS)
+
 endif HAVE_PMI
 
 if HAVE_CRITERION
