contrib/intel/jenkins: add ze fabtests support
Add ze support to jenkins scripts

Signed-off-by: zdworkin <zachary.dworkin@intel.com>

--- a/contrib/intel/jenkins/Jenkinsfile
+++ b/contrib/intel/jenkins/Jenkinsfile
@@ -107,6 +107,22 @@ pipeline {
                         }
                     }
                 }
+		stage('ze') {
+		    agent {node {label 'ze'}}
+                    options { skipDefaultCheckout() }
+		    steps{
+                       withEnv(['PATH+EXTRA=/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/bin/:$PYTHONPATH'])
+                       {
+                         sh """
+                           env
+                           (
+                               cd /opt${env.WORKSPACE}/contrib/intel/jenkins/
+                               python3.7 runtests.py --prov=shm --ofi_build_mode='dbg' --device='ze'
+                           )
+                         """
+                       }
+		    }
+		}
             }
         }
     }
