fabtests/component: add sock_test to test performance of poll, epoll, and select
./sock_test -n <connections> -s <server> -m <poll, epoll, select> -I <iterations>

Signed-off-by: Alex McKinley <alex.mckinley@intel.com>

--- a/fabtests/Makefile.am
+++ b/fabtests/Makefile.am
@@ -64,7 +64,8 @@ bin_PROGRAMS = \
 	unit/fi_getinfo_test \
 	ubertest/fi_ubertest	\
 	multinode/fi_multinode	\
-	multinode/fi_multinode_coll
+	multinode/fi_multinode_coll \
+	component/sock_test
 
 dist_bin_SCRIPTS = \
 	scripts/runfabtests.sh \
@@ -426,11 +427,19 @@ multinode_fi_multinode_coll_SOURCES = \
 	multinode/include/coll_test.h \
 	multinode/include/core.h
 
-multinode_fi_multinode_coll_LDADD = 	libfabtests.la
+multinode_fi_multinode_coll_LDADD = libfabtests.la
 
 multinode_fi_multinode_coll_CFLAGS = \
 	$(AM_CFLAGS) \
 	-I$(srcdir)/multinode/include
+
+component_sock_test_SOURCES = \
+	component/sock_test.c
+
+component_sock_test_LDADD = libfabtests.la
+
+component_sock_test_CFLAGS = \
+	$(AM_CFLAGS)
 
 real_man_pages = \
 	 man/man7/fabtests.7
