fabtests: Add header sched.h for windows
Define macros CPU_ZERO(), CPU_SET(), and implement
function sched_setaffinity() for Windows.

Signed-off-by: Jie Zhang <zhngaj@amazon.com>

--- a/fabtests/fabtests.vcxproj.filters
+++ b/fabtests/fabtests.vcxproj.filters
@@ -227,6 +227,9 @@
     <ClInclude Include="include\windows\unistd.h">
       <Filter>Header Files\osd</Filter>
     </ClInclude>
+    <ClInclude Include="include\windows\sched.h">
+      <Filter>Header Files\osd</Filter>
+    </ClInclude>
     <ClInclude Include="include\windows\sys\socket.h">
       <Filter>Header Files\osd\sys</Filter>
     </ClInclude>
