--- a/fabtests/Makefile.am
+++ b/fabtests/Makefile.am
@@ -143,7 +143,8 @@ nobase_dist_config_DATA = \
 	pytest/efa/test_rdm.py \
 	pytest/efa/test_rma_bw.py \
 	pytest/efa/test_unexpected_msg.py \
-	pytest/efa/test_multi_recv.py
+	pytest/efa/test_multi_recv.py \
+	pytest/efa/test_rnr.py
 
 noinst_LTLIBRARIES = libfabtests.la
 
